Revert "z-index fix for navbar/input bar"
This reverts commit 8b4b14f523979a395d43d9725410b56bfefb55ca.

--- a/src/styles/_chat.scss
+++ b/src/styles/_chat.scss
@@ -19,7 +19,6 @@
   grid-auto-columns: auto 1fr;
   grid-gap: $magic-number;
   justify-items: end;
-  z-index: 1;
   .logo img {
     max-height: $magic-number * 7;
     margin-right: $magic-number;
@@ -65,7 +64,6 @@
   align-content: center;
   grid-gap: $magic-number * 2;
   grid-template-columns: 1fr auto;
-  z-index: 1;
 }
 
 .sidebar.closed {
